--- a/package.json
+++ b/package.json
@@ -11,23 +11,29 @@
     "/webResources"
   ],
   "dependencies": {
-    "jsonpickle": "^1.1.2",
+    "jsonpickle": "^1.2.0",
     "midicube": "^0.9.2",
     "vexflow": "^4.2.3"
   },
+  "_why": {
+    "@types/jquery": "Still allow JQuery to be used as input even though it is no longer part of the system",
+    "eslint-plugin-import": "Used in flat eslint-config-airbnb-extended legacy.js"
+  },
   "devDependencies": {
-    "@types/qunit": "^2.19.12",
-    "@typescript-eslint/eslint-plugin": "^8.39.0",
-    "@typescript-eslint/parser": "^8.39.0",
-    "ajv": "^8.17.1",
+    "@types/jquery": "^3.5.32",
+    "@types/qunit": "^2.19.13",
+    "@typescript-eslint/eslint-plugin": "^8.50.1",
+    "@typescript-eslint/parser": "^8.50.1",
     "eslint": "^9.32.0",
-    "eslint-config-airbnb-extended": "^2.1.2",
-    "globals": "^16.3.0",
-    "npm-check-updates": "^18.0.1",
-    "qunit": "^2.24.1",
-    "typescript": "^5.8.3",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-config-airbnb-extended": "^2.3.3",
+    "globals": "^16.5.0",
+    "npm-check-updates": "^19.2.0",
+    "qunit": "^2.24.3",
+    "typescript": "^5.9.3",
     "vite": "^7.3.0",
     "vite-plugin-checker": "^0.12.0",
+    "vite-plugin-directory-index": "^3.0.1",
     "vitest": "^4.0.16"
   },
   "directories": {
