--- a/package.json
+++ b/package.json
@@ -20,16 +20,20 @@
     "eslint-plugin-import": "Used in flat eslint-config-airbnb-extended legacy.js"
   },
   "devDependencies": {
+    "@playwright/test": "^1.57.0",
     "@types/jquery": "^3.5.32",
+    "@types/node": "^25.0.3",
     "@types/qunit": "^2.19.13",
     "@typescript-eslint/eslint-plugin": "^8.50.1",
     "@typescript-eslint/parser": "^8.50.1",
     "eslint": "^9.32.0",
-    "eslint-plugin-import": "^2.32.0",
     "eslint-config-airbnb-extended": "^2.3.3",
+    "eslint-plugin-import": "^2.32.0",
     "globals": "^16.5.0",
     "npm-check-updates": "^19.2.0",
     "qunit": "^2.24.3",
+    "start-server-and-test": "^2.1.3",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3",
     "vite": "^7.3.0",
     "vite-plugin-checker": "^0.12.0",
@@ -45,6 +49,8 @@
     "build:types": "tsc -p tsconfig.json --emitDeclarationOnly",
     "build:all": "npm run build && npm run build:types",
     "prepublishOnly": "rm -rf releases && npm run build:all && cp -rp build/ releases/ && rm -rf releases/tests",
+    "test:qunit": "tsx tests/run_qunit_playwright.ts",
+    "test": "start-server-and-test dev http://localhost:5173/tests/ test:qunit",
     "postinstall": "sh scripts/postinstall.bash"
   },
   "repository": {
